--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -19,7 +19,7 @@
             {% endfor %}
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p id='new_user'>New User? <a href="{{ url_for('register') }}">Click to Register</a></p>
+        <p id='new_user'>New User? <a href="{{ url_for('auth.register') }}">Click to Register</a></p>
         <p>{{ form.submit(class_='float_button_right button') }}</p>
     </form>
 {% endblock content %}
