--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,9 +14,9 @@
 <body>
     <div class="navbar">
         {% if current_user.is_anonymous %}       
-        <a class="float_button_right" href="{{ url_for('login') }}">Login</a>
+        <a class="float_button_right" href="{{ url_for('auth.login') }}">Login</a>
         {% else %}
-        <a class="float_button_right" href="{{ url_for('logout') }}">Logout</a>
+        <a class="float_button_right" href="{{ url_for('auth.logout') }}">Logout</a>
         <a class="float_button_right" href="{{ url_for('edit_profile') }}">Settings</a>
         <a class="float_button_right" href="{{ url_for('dashboard', app_name='') }}">Dashboard</a>
         {% endif %}
